--- a/client/src/components/Form/Form.scss
+++ b/client/src/components/Form/Form.scss
@@ -4,8 +4,13 @@
   flex-direction: column;
   margin: 5% 0;
     button {
+      background-color: black;
+      border: none;
+      border-radius: 4px;
+      color: white;
       height: 2.5em;
       margin: 5% 0;
+      padding: 0 8px;
     }
 }
 
@@ -18,6 +23,7 @@
   padding: 0 2em;
   width: 75%;
     input {
+      border-radius: 4px;
       height: 1.75em;
       width: 85%;
     }
