took out console log in layout.jsx and changed hover in mobile menu.scss

--- a/client/src/layout/MobileMenu/MobileMenu.scss
+++ b/client/src/layout/MobileMenu/MobileMenu.scss
@@ -10,7 +10,6 @@
   display: none;
 }
 
-
 .mobile-menu {
   display: grid;
   grid-template-columns: 1fr;
@@ -28,7 +27,8 @@
   list-style: none;
   cursor: pointer;
   transition: 0.2s ease-in-out;
-}
-.nav-link:hover {
-  color: blueviolet;
+
+  &:hover {
+    color: blueviolet;
+  }
 }
