- update form component to be able to take an object from an imported data file - update edit/create user profile page to work with the new form component - update edit/create user profile page to work the new header component

--- a/client/src/layout/Layout.scss
+++ b/client/src/layout/Layout.scss
@@ -1,11 +1,13 @@
-.responsive-wrapper{
+.responsive-wrapper {
   display: flex;
   justify-content: center;
 }
 
-
 .layout-container {
+  border: 1px solid green;
+  height: 667px;
+  max-height: 667px;
+  max-width: 375px;
+  overflow: scroll;
   width: 375px;
-  height: 812px;
-  border: 5px solid green;
 }
