--- a/client/src/components/Form/Form.scss
+++ b/client/src/components/Form/Form.scss
@@ -3,18 +3,18 @@
   display: flex;
   flex-direction: column;
   margin: 5% 0;
-    button {
-      background-color: black;
-      border: none;
-      border-radius: 4px;
-      color: white;
-      height: 2.5em;
-      margin: 5% 0;
-      padding: 0 8px;
-    }
+  button {
+    background-color: black;
+    border: none;
+    border-radius: 4px;
+    color: white;
+    height: 2.5em;
+    margin: 5% 0;
+    padding: 0 8px;
+  }
 }
 
-.input-div {
+.input-wrapper {
   align-items: flex-start;
   display: flex;
   flex-direction: column;
@@ -22,13 +22,12 @@
   margin: 5% 2% 0 2%;
   padding: 0 2em;
   width: 75%;
-    input {
-      border-radius: 4px;
-      height: 1.75em;
-      width: 85%;
-    }
-    label {
-      margin-bottom: .5rem;
-    }
-
+  input {
+    border-radius: 4px;
+    height: 1.75em;
+    width: 85%;
+  }
+  label {
+    margin-bottom: 0.5rem;
+  }
 }
