--- a/client/src/components/Modal/Modal.scss
+++ b/client/src/components/Modal/Modal.scss
@@ -2,10 +2,11 @@
   align-items: center;
   background-color: rgba(0, 0, 0, 0.7);
   display: flex;
-  height: 100vh;
+  height: 667px;
   justify-content: center;
   position: absolute;
-  width: 100vw;
+  top: 0;
+  width: 375px;
   z-index: 2;
 }
 .modal-wrapper {
