added onSubmit prop to button.jsx

--- a/client/src/components/Button/Button.scss
+++ b/client/src/components/Button/Button.scss
@@ -1,16 +1,23 @@
 //variables
-
 $primary: #000;
 $secondary: #fff;
 
 .btn{
   border-radius: 3px;
   display: inline-block;
-  padding: 10px 20px;
+  padding: 5px 10px;
+  margin: 5px;
 }
 
-//.btn-primary-solid
 
-//.btn-primary-outline
+.btn-primary{
+  background-color: $primary;
+  color: $secondary;
+}
+
+.btn-secondary{
+  background-color: $secondary;
+  color: $primary;
+}
 
 //.btn-variart
