adjust img placeholder width in container

--- a/client/src/screens/Landing/Landing.scss
+++ b/client/src/screens/Landing/Landing.scss
@@ -7,7 +7,7 @@
     align-items: center;
     justify-content: space-between;
     .img-placeholder {
-        width: 100vw;
+        width: 100%;
         background-color: black;
         height: 330px;
     }
