add try it button and placeholder text

--- a/client/src/screens/Landing/Landing.scss
+++ b/client/src/screens/Landing/Landing.scss
@@ -9,7 +9,7 @@
     .img-placeholder {
         width: 100%;
         background-color: black;
-        height: 330px;
+        height: 280px;
     }
     h1 {
         font-size: 24px;
@@ -26,8 +26,11 @@
         width: 90px;
         font-size: 12px;
     }
+    h5 {
+        margin-top: 15px;
+    }
     h6 {
-        margin-top: 55px;
+        margin-top: 25px;
         font-size: 12px;
     }
 }
