centers Project Title

--- a/client/src/screens/SingleProject/SingleProject.scss
+++ b/client/src/screens/SingleProject/SingleProject.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   padding: 10%;
     .project-title {
-      margin-bottom: 10px;
+      margin: 10px auto;
     }
     button {
       margin: 10px;
