--- a/client/src/components/Projects/PortfolioCard/PortfolioCard.scss
+++ b/client/src/components/Projects/PortfolioCard/PortfolioCard.scss
@@ -37,3 +37,15 @@
     width: 100%;
   }
 }
+
+.edit-portfolio-project {
+  display: flex;
+  border: 1px solid black;
+  padding: 10px;
+  flex-direction: column;
+  label {
+    input {
+      display: block;
+    }
+  }
+}
