--- a/client/src/components/Button/DoubleActionButton.scss
+++ b/client/src/components/Button/DoubleActionButton.scss
@@ -1,27 +1,35 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap');
 
 
 .double-button {
-    background-color: black;
-    height: 33px;
-    width: 250px;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: white;
-    border-radius: 4px;
-    font-size: 25px;
-    margin: 5px;
-    a {
+    justify-content: center;
+    margin: 10px;
+    button {
+        font-family: 'Roboto', sans-serif;
+        font-weight: 300;
+        font-size: 14px;
+        border-style: none;
+        background-color: black;
         color: white;
         text-decoration: none;
-        font-size: 14px;
-        font-weight: 400;
-        width: 50%;
-        text-align: center;
-        font-family: 'Roboto', sans-serif;
+        height: 30px;
+        width: 150px;
         padding: 5px;
     }
-
+    .left {
+        border-radius: 4px 0 0 4px;
+    }
+    .right {
+        border-radius: 0 4px 4px 0;
+    }
+    p {
+        font-family: 'Roboto', sans-serif;
+        background-color: black;
+        color: white;
+        font-size: 25px;
+        font-weight: 100;
+        align-self: center;
+        height: 30px;
+    }
 }
