--- a/client/src/components/Button/SingleActionButton.scss
+++ b/client/src/components/Button/SingleActionButton.scss
@@ -1,10 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap');
+
 .single-button {
-    background-color: black;
-    height: 33px;
-    width: 100px;
-    color: white;
-    border-style: none;
-    border-radius: 4px;
-    font-size: 14px;
-    margin: 5px;
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+    button {
+        font-family: 'Roboto', sans-serif;
+        font-weight: 300;
+        background-color: black;
+        height: 30px;
+        width: 150px;
+        padding: 5px;
+        color: white;
+        border-style: none;
+        border-radius: 4px;
+        font-size: 14px;
+        margin: 5px;
+    }
 }
