change p tag to div

--- a/client/src/components/Button/DoubleActionButton.scss
+++ b/client/src/components/Button/DoubleActionButton.scss
@@ -23,7 +23,7 @@
     .right {
         border-radius: 0 4px 4px 0;
     }
-    p {
+    .separator {
         font-family: 'Roboto', sans-serif;
         background-color: black;
         color: white;
