--- a/client/src/screens/SignUp/SignUp.scss
+++ b/client/src/screens/SignUp/SignUp.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-top: 50px;
+    padding-top: 80px;
     font-family: 'Roboto', sans-serif;
     h4 {
         align-self: center;
@@ -15,6 +15,7 @@
     }
     label {
         font-weight: 300;
+        font-size: 14px;
     }
     input {
         width: 100%;
