add left padding to input fields

--- a/client/src/screens/SignUp/SignUp.scss
+++ b/client/src/screens/SignUp/SignUp.scss
@@ -21,7 +21,7 @@
         width: 100%;
         height: 28px;
         border: solid black 1px;
-        margin: 0;
+        padding-left: 7px;
     }
     .input-wrapper {
         width: 100%;
