--- a/client/src/components/Modal/Modal.scss
+++ b/client/src/components/Modal/Modal.scss
@@ -22,6 +22,7 @@
     flex-direction: column;
     height: 80%;
     justify-content: space-evenly;
+    align-items: center;
     margin: auto;
     width: 70%;
   }
