--- a/client/src/screens/SignUp/SignUp.scss
+++ b/client/src/screens/SignUp/SignUp.scss
@@ -27,4 +27,11 @@
         width: 100%;
         margin-top: 7px;
     }
+    h6 {
+        align-self: center;
+    }
+}
+
+.form-error {
+    margin-top: 5px;
 }
