--- a/client/src/screens/SignUp/SignUp.scss
+++ b/client/src/screens/SignUp/SignUp.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 
 
-.sign-up-screen {
+.auth-form {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -28,6 +28,12 @@
         margin-top: 7px;
     }
     h6 {
+        align-self: center;
+    }
+    a {
+        color: black;
+        font-size: 12px;
+        font-style: italic;
         align-self: center;
     }
 }
