add curser pointer to Button components

--- a/client/src/components/Button/DoubleActionButton.scss
+++ b/client/src/components/Button/DoubleActionButton.scss
@@ -16,6 +16,7 @@
         height: 30px;
         width: 150px;
         padding: 5px;
+        cursor: pointer;
     }
     .left {
         border-radius: 4px 0 0 4px;
