relocate assets folder to src add fonts.css in assets folder importing inter and nunito from google fonts, nunito is replacing avenir next for now modify screen height and width to iphone se dimensions until discussed with team updating landing screen to reflect dimensions from figma, subject ot change to due different screen widths

--- a/client/src/layout/Layout.scss
+++ b/client/src/layout/Layout.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+
 .responsive-wrapper {
   display: flex;
   justify-content: center;
@@ -5,9 +7,10 @@
 
 .layout-container {
   border: 1px solid green;
-  height: 667px;
-  max-height: 667px;
-  max-width: 375px;
+  font-family: 'nunito', sans-serif;
+  height: 568px;
+  max-height: 568px;
+  max-width: 320px;
   overflow: scroll;
-  width: 375px;
+  width: 320px;
 }
