updated singleactionbutton in src. need review to see why bordercolor isnt working

--- a/client/src/components/Button/SingleActionButton.scss
+++ b/client/src/components/Button/SingleActionButton.scss
@@ -12,7 +12,7 @@
         width: 110px;
         padding: 5px;
         color: white;
-        border-style: none;
+        // border-style: none;
         border-radius: 4px;
         font-size: 14px;
         margin: 5px;
