--- a/client/src/screens/SignIn/SignIn.scss
+++ b/client/src/screens/SignIn/SignIn.scss
@@ -1,43 +1,42 @@
-/*  
-    accountForms: {
-      alignItems: 'center',
-      flex: 1,
-      justifyContent: 'center',
-    }
+.account-forms {
+  align-items: center;
+  display: flex;
+  flex: 1;
+  justify-content: center;
+}
 
-    buttonText: {
-      color: 'white',
-      fontWeight: '500',
-    }
+.title {
+  font-size: 16;
+  font-weight: 700;
+  margin: 20;
+}
 
-    input: {
-      borderStyle: 'solid',
-      borderRadius: 5,
-      borderWidth: 1,
-      color: 'black',
-      height: 30,
-      marginVertical: 10,
-      padding: 5,
-    }
+// buttonText: {
+//   color: 'white';
+//   fontWeight: '500';
+// }
 
-    inputContainer: {
-      marginHorizontal: 25,
-      width: 290,
-    }
+// input: {
+//   borderStyle: 'solid';
+//   borderRadius: 5;
+//   borderWidth: 1;
+//   color: 'black';
+//   height: 30;
+//   marginVertical: 10;
+//   padding: 5;
+// }
 
-    singleButton: {
-      alignItems: 'center',
-      backgroundColor: 'black',
-      borderRadius: 5,
-      height: 40,
-      justifyContent: 'center',
-      margin: 20,
-      width: 120,
-    }
+// inputContainer: {
+//   marginHorizontal: 25;
+//   width: 290;
+// }
 
-    title: {
-      fontSize: 16,
-      fontWeight: '700',
-      margin: 20,
-    }
-   */
+// singleButton: {
+//   alignItems: 'center';
+//   backgroundColor: 'black';
+//   borderRadius: 5;
+//   height: 40;
+//   justifyContent: 'center';
+//   margin: 20;
+//   width: 120;
+// }
