--- a/client/src/components/Button/SingleActionButton.scss
+++ b/client/src/components/Button/SingleActionButton.scss
@@ -1,54 +1,31 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap');
-
 .single-button {
-  align-items: 'center';
-  border-radius: 10;
-  display: 'flex';
-  height: 50;
-  justify-content: 'center';
-  margin-bottom: 10;
-  width: 250;
-
-    button {
-        font-family: 'Roboto', sans-serif;
-        font-weight: 300;
-        background-color: black;
-        height: 35px;
-        width: 110px;
-        padding: 5px;
-        color: white;
-        // border-style: none;
-        border-radius: 4px;
-        font-size: 14px;
-        margin: 5px;
-        cursor: pointer;
-    }
+  align-items: center;
+  border: none;
+  border-radius: 10px;
+  display: flex;
+  font-size: 16px;
+  font-weight: 'Nunito';
+  height: 50px;
+  justify-content: center;
+  margin-bottom: 10px;
+  text-align: center;
+  width: 102px;
 }
-
+    
 .default {
-  background-color: '#5c5c5c';
-
-  p {
-    color: '#fff'
-  }
+  background-color: #1b1b1b;
+  color: #fff;
 }
 
 .disabled {
-  background-color: '#ebebe4';
-
-  p {
-    color: '#5c5c5c'
-  }
+  background-color: #ebebe4;
+  color: #5c5c5c
 }
 
 .light {
-  background-color: 'rgba(0,0,0,0)';
-  border-width: 1;
-  border-color: '#000';
-  
-  p {
-    color: '#000';
-  }
+  background-color: rgba(0,0,0,0);
+  border: 1px solid #000;
+  color: #000;
 }
 
 .long {
