--- a/client/src/screens/Landing/Landing.scss
+++ b/client/src/screens/Landing/Landing.scss
@@ -26,7 +26,7 @@
         margin: 30px 0;
     }
 
-    p {
+    .text {
       color: #999999;
       font-family: 'nunito', sans-serif;
       font-size: 14px;
