--- a/client/src/assets/fonts.css
+++ b/client/src/assets/fonts.css
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&family=Nunito&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Nunito:wght@600;700&display=swap');
