--- a/client/src/screens/SignIn/SignIn.scss
+++ b/client/src/screens/SignIn/SignIn.scss
@@ -1,7 +1,8 @@
 .auth-form {
+  color: #1b1b1b;
   display: flex;
   flex-direction: column;
-  // font-family: 'Nunito', sans-serif;
+  font-family: 'Nunito', sans-serif;
   justify-content: center;
   padding-top: 80px;
 
@@ -14,32 +15,32 @@
     width: 72px;
   }
 
-  label {
-    font-size: 16px;
-    // font-weight: 500;
-    line-height: 21.86px;
-  }
-
-  input {
-    width: 100%;
-    height: 28px;
-    border: solid black 1px;
-    padding-left: 7px;
+  .form {
+    margin-top: 55px;
   }
 
   .input-wrapper {
     width: 100%;
-    margin-top: 7px;
+  }
+
+  label {
+    font-size: 16px;
+    font-weight: 500;
+    height: 22px;
+    line-height: 21.86px;
+    margin-bottom: 0;
+    width: 300px;
+  }
+
+  input {
+    border: solid #1b1b1b 1px;
+    border-radius: 4%;
+    height: 28px;
+    padding-left: 7px;
+    width: 100%;
   }
 
   h6 {
-    align-self: center;
-  }
-
-  a {
-    color: black;
-    font-size: 12px;
-    font-style: italic;
     align-self: center;
   }
 }
