--- a/client/src/screens/SignIn/SignIn.scss
+++ b/client/src/screens/SignIn/SignIn.scss
@@ -10,6 +10,7 @@
     align-self: center;
     font-size: 24px;
     font-weight: 700;
+    letter-spacing: -0.7px;
     height: 33px;
     text-align: center;
     width: 72px;
@@ -17,6 +18,7 @@
 
   .form {
     margin-top: 55px;
+    gap: 104x;
   }
 
   .input-wrapper {
@@ -45,7 +47,7 @@
   }
 
   .action-btn-container {
-    margin-top: 50px;
+    margin-top: 44px;
   }
 }
 
