--- a/client/src/screens/UserProfile/UserProfile.scss
+++ b/client/src/screens/UserProfile/UserProfile.scss
@@ -1,8 +1,41 @@
 .user-profile {
+  align-items: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+
+  .contact {
+    display: flex;
+    justify-content:space-around;
+    padding: 10px;
+    width: 100%;
+  }
+  
+  .contact-left {
+    position: relative;
+  }
+
+  .toggle-edit {
+    align-items: center;
+    background-color: #fff;
+    border: 2px solid #000;
+    border-radius: 100%;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    height: 40px;
+    position: absolute;
+    right: 0;
+    width: 40px;
+  }
+  
+  .image {
+    background-color: #c4c4c4;
+    border-radius: 100%;
+    height: 140px;
+    margin: auto;
+    width: 140px;
+  }
 }
 
 .info-card {
