--- a/client/src/screens/SignUp/SignUp.scss
+++ b/client/src/screens/SignUp/SignUp.scss
@@ -4,9 +4,11 @@
   font-family: 'Nunito', sans-serif;
   justify-content: center;
   padding-top: 80px;
-  h4 {
+  h3 {
+    margin-bottom: -4vh;
+    margin-top: -2vh;
     align-self: center;
-    font-weight: 500;
+    font-weight: 900;
     text-align: center;
     width: max-content;
   }
