--- a/client/src/screens/SignUp/SignUp.scss
+++ b/client/src/screens/SignUp/SignUp.scss
@@ -4,36 +4,41 @@
   font-family: 'Nunito', sans-serif;
   justify-content: center;
   padding-top: 80px;
-  h3 {
-    margin-bottom: -5vh;
-    margin-top: -2vh;
-    align-self: center;
-    font-weight: 900;
-    text-align: center;
-    width: max-content;
-  }
-  label {
-    font-size: 14px;
-    font-weight: 300;
-  }
-  input {
-    border: solid black 1px;
-    height: 28px;
-    padding-left: 7px;
-    width: 100%;
-  }
   .input-wrapper {
     margin-top: 7px;
     width: 100%;
-  }
-  h6 {
-    align-self: center;
   }
   a {
     align-self: center;
     color: black;
     font-size: 12px;
     font-style: italic;
+  }
+  h6 {
+    align-self: center;
+  }
+  h3 {
+    align-self: center;
+    font-weight: 700;
+    font-size: 24px;
+    margin-bottom: -6vh;
+    margin-top: -2vh;
+    text-align: center;
+    width: max-content;
+  }
+  input {
+    border: solid black 1px;
+    box-shadow: 0.3px 1px darkgrey;
+    height: 28px;
+    padding-left: 7px;
+    width: 100%;
+  }
+  label {
+    font-size: 14px;
+    font-weight: 300;
+  }
+  .SingleActionButton {
+    background-color: red;
   }
 }
 
