--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -1,15 +1,15 @@
 .header {
   align-items: center;
-  border: 1px solid black;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
+  // font-size: 24px;
+  font-weight: 600;
   margin: 1% 15%;
   .header-text {
     padding: 2% 5%;
   }
   .header-title {
     margin: 2% 0;
-    text-decoration: underline;
   }
 }
