--- a/client/src/screens/SignUp/SignUp.scss
+++ b/client/src/screens/SignUp/SignUp.scss
@@ -1,32 +1,37 @@
-.auth-form {
+.sign-up-screen {
   display: flex;
   flex-direction: column;
   font-family: 'Nunito', sans-serif;
   justify-content: center;
-  padding-top: 80px;
+
   h4 {
     align-self: center;
     font-weight: 500;
     text-align: center;
     width: max-content;
   }
+  
   label {
     font-size: 14px;
     font-weight: 300;
   }
+  
   input {
     border: solid black 1px;
     height: 28px;
     padding-left: 7px;
     width: 100%;
   }
+  
   .input-wrapper {
     margin-top: 7px;
     width: 100%;
   }
+  
   h6 {
     align-self: center;
   }
+  
   a {
     align-self: center;
     color: black;
