--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -3,6 +3,15 @@
   display: flex;
   flex-direction: column;
   margin: 5% 0;
+  button {
+    background-color: black;
+    border: none;
+    border-radius: 4px;
+    color: white;
+    height: 2.5em;
+    margin: 5% 0;
+    padding: 0 8px;
+  }
 }
 
 .input-wrapper {
