--- a/src/layout/Layout.scss
+++ b/src/layout/Layout.scss
@@ -5,7 +5,7 @@
 
 .layout-container {
   border: 1px solid green;
-  font-family: 'Nunito', sans-serif;
+  font-family: 'nunito', sans-serif;
   height: 568px;
   max-height: 568px;
   max-width: 320px;
