--- a/client/src/screens/CreateProject/CreateProject.scss
+++ b/client/src/screens/CreateProject/CreateProject.scss
@@ -1,10 +1,8 @@
-.tool-preview {
-  align-items: center;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  button {
-    height: 1.2em;
-    margin-left: 10px;
+.create-project-screen {
+  .create-project-header {
+    h3 {
+      display: flex;
+      justify-content: center;
+    }
   }
 }
