--- a/client/src/components/Projects/AboutProject/AboutProject.scss
+++ b/client/src/components/Projects/AboutProject/AboutProject.scss
@@ -12,14 +12,12 @@
       display: flex;
       justify-content: space-between;
       #designer-count {
-        height: 1.7rem;
         margin-right: 0.5rem;
-        width: 2.2rem;
+        width: 2.5rem;
       }
       #engineer-count {
-        height: 1.7rem;
         margin-right: 0.5rem;
-        width: 2.2rem;
+        width: 2.5rem;
       }
     }
     input {
@@ -32,14 +30,13 @@
       align-items: center;
       display: flex;
       justify-content: space-between;
-      margin-top: -0.3rem;
+      margin-top: -0.9rem;
       width: 100%;
       button {
         background-color: lightgrey;
         color: black;
         font-family: "Nunito", sans-serif;
         font-weight: 600;
-        height: 23px;
       }
       input {
         width: 80%;
@@ -47,12 +44,14 @@
     }
   }
   .single-button{
-    background-color: lightgrey;
-    color: black;
-    font-family: "Nunito", sans-serif;
-    font-weight: 600;
-    margin-top: 1rem;
-    width: 60%;
+    width: 100%;
+    button {
+      background-color: lightgrey;
+      color: black;
+      font-family: "Nunito", sans-serif;
+      font-weight: 600;
+      width: 60%;
+    }
   }
 }
 
