--- a/src/screens/SignUp/SignUp.scss
+++ b/src/screens/SignUp/SignUp.scss
@@ -1,3 +1,9 @@
+.form-error {
+  margin-top: 5px;
+}
+.single-button {
+  margin-top: 2rem;
+}
 .sign-up-screen {
   display: flex;
   flex-direction: column;
@@ -6,18 +12,8 @@
   justify-content: center;
   padding-top: 80px;
 
-  .header {
+  .footer {
     align-self: center;
-    font-weight: 700;
-    font-size: 24px;
-    margin-top: -4rem;
-    text-align: center;
-    width: max-content;
-  }
-
-  .input-wrapper {
-    margin-top: 7px;
-    width: 100%;
   }
 
   form {
@@ -27,11 +23,10 @@
       font-size: 12px;
       font-style: italic;
     }
-
-    h6 {
-      align-self: center;
+    .input-wrapper {
+      margin-top: 7px;
+      width: 100%;
     }
-
     input {
       border: solid black 1px;
       box-shadow: 0.3px 1px darkgrey;
@@ -39,18 +34,19 @@
       padding-left: 7px;
       width: 100%;
     }
-
     label {
       font-size: 14px;
-      font-weight: 400;
+      font-weight: 500;
     }
+  }
 
-    .SingleActionButton {
-      background-color: red;
-    }
+  .header {
+    align-self: center;
+    font-weight: 700;
+    font-size: 24px;
+    margin-top: -4rem;
+    text-align: center;
+    width: max-content;
   }
 }
 
-.form-error {
-  margin-top: 5px;
-}
