--- a/src/screens/EditProfile/EditProfile.scss
+++ b/src/screens/EditProfile/EditProfile.scss
@@ -37,7 +37,7 @@
   .toggle-edit-mode {
     align-items: center;
     background-color: #d9d9d9;
-    color: #000;
+    color: #fff;
     border-radius: 100%;
     cursor: pointer;
     display: flex;
