--- a/src/screens/EditProfile/EditProfile.scss
+++ b/src/screens/EditProfile/EditProfile.scss
@@ -37,23 +37,24 @@
   .toggle-edit-mode {
     align-items: center;
     background-color: #d9d9d9;
-    color: #fff;
     border-radius: 100%;
+    color: #fff;
     cursor: pointer;
     display: flex;
     height: 29px;
     justify-content: center;
     position: absolute;
-    right: 100px;
+    right: 82px;
+    top: 10px;
     width: 29px;
   }
 
   .image {
     background-color: #c4c4c4;
     border-radius: 100%;
-    height: 125px;
+    height: 160px;
     margin: auto;
-    width: 125px;
+    width: 160px;
   }
 
   // Right side of user contact
@@ -63,6 +64,13 @@
   //   justify-content: space-evenly;
   //   text-align: center;
   // }
+
+  .currUser {
+    font-size: 24px;
+    font-weight: 600;
+    margin: 15px;
+    text-align: center;
+  }
 
   .name {
     font-size: 24px;
