--- a/src/screens/EditProfile/EditProfileForm.scss
+++ b/src/screens/EditProfile/EditProfileForm.scss
@@ -1,24 +1,66 @@
 .form {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  margin: 5% 0;
+  // align-items: center;
+  // display: flex;
+  // flex-direction: column;
+  // margin: 5% 0;
 }
 
-.input-wrapper {
-  align-items: flex-start;
+div > label + div {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin: 5% 2% 0 2%;
-  padding: 0 2em;
-  width: 75%;
-  input {
-    border-radius: 4px;
-    height: 1.75em;
-    width: 85%;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+.container {
+  display: flex;
+}
+
+.role-wrapper {
+  // position: relative;
+
+  // gap: 50px;
+
+  // flex-direction: column;
+  // justify-content: center;
+  // margin: 5% 2% 0 2%;
+  // padding: 0 2em;
+  // width: 75%;
+
+  // .checkbox {
+  //   margin-right: 10px;
+  //   accent-color: red;
+  // }
+
+  input[type='checkbox'] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -o-appearance: none;
+    appearance: none;
+    box-shadow: 0 0 0 1px black;
+    border: 4px solid white;
+    margin-right: 10px;
+    position: relative;
   }
+
+  input[type='checkbox']:checked::before {
+    content: '✓';
+    font-size: 18px;
+    display: inline-block;
+    position: absolute;
+    top: -13px;
+    right: -8.8px;
+    text-align: center;
+    color: #000000;
+  }
+
+  .role-inputs {
+    border: 1px solid #000000;
+    border-radius: 4px;
+    padding: 10px;
+  }
+
   label {
+    font-size: 12px;
     margin-bottom: 0.5rem;
   }
 }
