removed unused or redundant code

--- a/src/screens/EditProfile/EditProfile.scss
+++ b/src/screens/EditProfile/EditProfile.scss
@@ -44,7 +44,7 @@
     height: 29px;
     justify-content: center;
     position: absolute;
-    right: 82px;
+    right: 78px;
     top: 10px;
     width: 29px;
   }
@@ -68,7 +68,7 @@
   .currUser {
     font-size: 24px;
     font-weight: 600;
-    margin: 15px;
+    margin: 15px 0px 30px;
     text-align: center;
   }
 
