--- a/src/screens/EditProfile/EditProfileForm.scss
+++ b/src/screens/EditProfile/EditProfileForm.scss
@@ -13,54 +13,64 @@ div > label + div {
 
 .container {
   display: flex;
+  gap: 8px;
+}
+
+#role {
+  align-self: center;
 }
 
 .role-wrapper {
-  // position: relative;
-
-  // gap: 50px;
-
-  // flex-direction: column;
-  // justify-content: center;
-  // margin: 5% 2% 0 2%;
-  // padding: 0 2em;
-  // width: 75%;
-
-  // .checkbox {
-  //   margin-right: 10px;
-  //   accent-color: red;
-  // }
+  gap: 10px;
 
   input[type='checkbox'] {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -o-appearance: none;
     appearance: none;
     box-shadow: 0 0 0 1px black;
     border: 4px solid white;
-    margin-right: 10px;
+    margin: 0px 8px 0px 5px;
     position: relative;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -o-appearance: none;
   }
 
   input[type='checkbox']:checked::before {
+    color: #000000;
     content: '✓';
-    font-size: 18px;
     display: inline-block;
+    font-size: 18px;
     position: absolute;
-    top: -13px;
     right: -8.8px;
     text-align: center;
-    color: #000000;
+    top: -13px;
   }
 
   .role-inputs {
     border: 1px solid #000000;
     border-radius: 4px;
-    padding: 10px;
+    padding: 3px;
   }
 
   label {
     font-size: 12px;
     margin-bottom: 0.5rem;
   }
+}
+
+form > div + div.container {
+  display: flex;
+  flex-direction: column;
+}
+
+label#about,
+#fun_fact,
+#portfolio_link {
+  margin-top: 25px;
+  text-align: start !important;
+}
+
+input#about,
+input#fun_fact {
+  height: 151px;
+  width: 250px;
 }
