--- a/src/screens/EditProfile/EditProfile.scss
+++ b/src/screens/EditProfile/EditProfile.scss
@@ -44,10 +44,6 @@
     text-transform: capitalize;
   }
 
-  .role {
-    font-size: 18px;
-  }
-
   .media {
     display: flex;
     justify-content: space-evenly;
@@ -62,6 +58,24 @@
 }
 
 .about-user {
+  font-size: 12px;
+
+  .label {
+    align-self: center;
+  }
+
+  .role-container {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 10px;
+  }
+
+  .role {
+    border: 1px solid #000000;
+    border-radius: 4px;
+    padding: 8px;
+  }
+
   input[type='checkbox'] {
     appearance: none;
     border: 4px solid white;
